--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     try {
 
-        alert(window.navigator.userAgent);
+        alert(navigator.userAgent);
 
         if (flag) {
             throw new Error('終了します');
