console.log→alertに変更

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         const pdfUrl = './200.pdf'; // PDFファイルのURL
         const isAndroid = /Android/i.test(navigator.userAgent); // Android端末の判定
 
-        console.log('isAndroid: ' + isAndroid);
+        alert('isAndroid: ' + isAndroid);
 
         if (flag) {
             throw new Error('終了します');
