pdfのパス修正

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         console.log('navigator.userAgent: ' + navigator.userAgent);
 
-        const pdfUrl = './200.pdf'; // PDFファイルのURL
+        const pdfUrl = '200.pdf'; // PDFファイルのURL
         const isAndroid = /Android/i.test(navigator.userAgent); // Android端末の判定
 
         alert('isAndroid: ' + isAndroid);
